--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: only pasta in my mind
-description: 
+description: a pasta lover blogging about everything except pasta
 github_username: niphiwi
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
@@ -49,7 +49,7 @@ use_math:
 show_description: true
 
 # Set this to true to display image previews on home page, if they exist
-show_image: false
+show_image: true
 
 # Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
 annotations: false
