--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: only pasta in my mind
-description: a pasta lover blogging about everything except pasta
+title: Nicolas P. Winkler
+description: Science, Baking and Philosophy
 github_username: niphiwi
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
